# playground

./: .gitignore  .gitmodules  CMakeLists.txt  SEGGER.diff  nrf52840dk_nrf52840.overlay  prj.conf  prj_dbg.conf  west.yml
src/: main.c
src/bt_sample/: button_svc.c  led_svc.c  led_svc.h
src/services/: button_svc.c  button_svc.h  imu_svc.c  imu_svc.h  irq_svc.c  irq_svc.h  segger_svc.h
src/threads/: meas_thd.c  meas_thd.h
